--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "ipdb>=0.13.13",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.7",
     "openai>=1.90.0",
