Fix linter scoring bug and add pylint dependency
- Fixed linter.py to properly extract scores from pylint output
- Improved summary logic to not say 'Code looks good!' for 0.0 scores
- Added pylint as a dependency via uv
- Now runs pylint twice: once for JSON issues, once for text score
- Better error handling and score validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.7",
     "openai>=1.90.0",
+    "pylint>=3.3.7",
 ]
 
 [project.optional-dependencies]
