--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "openai>=1.90.0",
     "pylint>=3.3.7",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
+    "pandas>=1.3.0",
+    "numpy>=1.20.0",
+    "litellm>=1.70.0",
 ]
 
 [project.optional-dependencies]
@@ -20,3 +25,8 @@ dev = [
 
 [tool.setuptools]
 packages = ["tools"]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+]
